# mosaic

mosaic-a15-main/mosaic-a15-main/: .gitignore  CMakeLists.txt  README.md
mosaic-a15-main/mosaic-a15-main/src/: Button.h  button.c  default.txt  game.c  game.h  game_aux.c  game_ext.c  game_ext.h  game_sdl.c  game_solve.c  game_struct.h  game_test_maitissad.c  game_test_olatestere.c  game_test_yhannachi.c  game_text.c  game_tools.c  model.c  model.h  moves.txt  queue.c  solutions.txt
mosaic-a15-main/mosaic-a15-main/web/make-game-web/: demo.js  game.html  style.css  wrapper.c
mosaic-a15-main/mosaic-a15-main/web/make-game-web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.c:Zone.Identifier  game_ext.h  game_private.c  game_private.h  game_struct.h  game_tools.c  game_tools.h
